[gd_scene load_steps=2 format=3 uid="uid://cvvuwojtihxim"]

[ext_resource type="Script" path="res://assets/components/clickable.gd" id="1_iy55f"]

[node name="clickable" type="Area2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_iy55f")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
